[#1536] Fix Positioning of the Search Completion Dropdown
Push down the completion dropdown of the Google Search input since it's
covering up the actual input.

Refs #1536

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -272,6 +272,9 @@ figure.wp-block-embed-youtube
     &:focus-within
       outline: 0
       box-shadow: 0 0 4px 2px rgba($teal, 0.25)
+/* Fix Positioning of Completion Dropdown */
+table.gssb_c table.gsc-completion-container
+  margin-top: 2rem
 
 
 
